Adds tool tips to the UI to document features.
Upgrades bootstrap CSS
Includes bootstrap twipsy JavaScript for tool tips.

Squashed commit of the following:

commit 50a25a04b65eef57ab93b603ba69c24b45944a16
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Wed Dec 18 14:42:17 2013 +0000

    Added/corrected the remaining table header tooltips

commit 1ca1f3adbc1974cd09e37a9ceadaed6d921c404f
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Wed Dec 18 14:41:58 2013 +0000

    Adds a 1s delay before showing the tooltip.

commit ddcb9d6f886b8ea3da53102fcb3bfb6abaf41759
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Wed Dec 18 09:26:14 2013 +0000

    Added more help text and tool tips

commit d8ab955ea13b5bf9b697462d1560436d45bc4565
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Wed Dec 18 09:25:52 2013 +0000

    Allow table headers with or without tooltip markup

commit a0ef568368cd2e0315b96b56c8bf5389a391766f
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Wed Dec 18 09:25:33 2013 +0000

    Increase font size of tooltips

commit aedb28ca7c2e56de7cb402e437c44505443bebf4
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Tue Dec 17 18:34:35 2013 +0000

    Incremental update to UI docs

commit de6101dcd0780f7bc058217d49e855606c2f070b
Merge: 82669f2 0d3dd93
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Tue Dec 17 13:58:36 2013 +0000

    Merge remote-tracking branch 'y/master-security' into derekd-ui-doc-popover-try

commit 82669f23aa0f982377e537f044c7add4e02af808
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Mon Dec 9 19:38:59 2013 +0000

    Enable/correct twipsy tooltip on various table headers

commit 704dc6a142512df685c57d21bb387e735d0c9b81
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Mon Dec 9 19:38:39 2013 +0000

    Update yicf to package bootstrap 1.4.0 css and twipsy

commit 0308b06d18558abd119c1ddf37c23a360aedef27
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Mon Dec 9 12:03:45 2013 -0600

    Do not show sys stats toggle wh

--- a/storm-core/src/ui/public/css/style.css
+++ b/storm-core/src/ui/public/css/style.css
@@ -6,3 +6,25 @@
     float: right;
     padding: 0.5em;
 }
+
+body {
+  color: #808080;
+}
+
+table {
+  border-collapse: separate;
+}
+
+table th, table td {
+  line-height: 13.5px;
+  border-bottom: 1px solid #ddd;
+  border-top-style: none;
+}
+
+table th {
+  border-bottom-width: 2px;
+}
+
+.twipsy-inner {
+  font-size: 13px;
+}
