First try at a backport

--- a/storm-core/src/ui/public/css/style.css
+++ b/storm-core/src/ui/public/css/style.css
@@ -19,30 +19,8 @@
     display: none;
 }
 
-.ui-user {
-    float: right;
+#ui-user {
+    text-align: right;
     padding: 0.5em;
 }
 
-body {
-  color: #808080;
-  padding: 0.2em;
-}
-
-table {
-  border-collapse: separate;
-}
-
-table th, table td {
-  line-height: 13.5px;
-  border-bottom: 1px solid #ddd;
-  border-top-style: none;
-}
-
-table th {
-  border-bottom-width: 2px;
-}
-
-.twipsy-inner {
-  font-size: 13px;
-}
